GitHub Action for Compiler
Checks if the current files related to the compiler can be compiled successfully.

--- a/.github/workflows/compiler.yml
+++ b/.github/workflows/compiler.yml
@@ -23,4 +23,4 @@ jobs:
         run: |
           flex scanner.l
           bison -d parser.y
-          gcc lex.yy.c parser.tab.c -lfl
+          gcc lex.yy.c parser.tab.c
